[gd_scene load_steps=2 format=3 uid="uid://c2jqpgq01ryt6"]

[ext_resource type="Script" uid="uid://ikgvp1ogbqf5" path="res://Scenes/main.gd" id="1_jjgbg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jjgbg")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="StackLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Stack: []"

[node name="PushButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Push Random"

[node name="PopButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Pop"
